--- a/pages/index.css
+++ b/pages/index.css
@@ -19,8 +19,6 @@ a{
     font-weight: 500;
 }
 
-
-
 body{
     background-color:rgba(255, 199, 229, 0) ;
 }
@@ -35,29 +33,36 @@ body{
     background-size: cover;
 }
 
-.header__barra{
+.nav{
     display: flex;
+    align-items: center;
     justify-content: space-between;
-    align-items: center;
-    padding-top: 10px;
-}
-
-ul{
-    
-    display: flex;
-    justify-content: center;
-    align-items: center;
-        list-style: none;
-    text-decoration: none;
-    gap: 20px;
     margin-right: 100px;
+    padding-top: 20px;
 }
 
-
-.header__titulo{
+.nav__links {
     display: flex;
     justify-content: center;
     align-items: center;
+    background-color: rgb(127, 236, 255);
+    padding: 10px;
+    border-radius: 10px;
+    box-shadow: 10px 2px 2px rgba(0, 90, 52, 0.262);
+    gap: 20px;
+}
+
+.header__contenedor{
+   display: flex;
+   justify-content: center;
+   align-items: center;
+}
+
+
+.pepe{
+    display: flex;
+   align-items: center;
+   flex-direction: column;
 }
 
 
