--- a/pages/index.css
+++ b/pages/index.css
@@ -128,8 +128,10 @@ main{
     gap: 40px;
 }
 
-.recipes__texto{
+.recipes__title{
+    color: white;
     display: flex;
+    align-items: center ;
     justify-content: space-between;
-    color: aliceblue;
 }
+
