--- a/pages/index.css
+++ b/pages/index.css
@@ -58,15 +58,6 @@ body{
    align-items: center;
 }
 
-
-.pepe{
-    display: flex;
-   align-items: center;
-   flex-direction: column;
-}
-
-
-
 h1{
     font-size: 6rem;
     line-height: 5rem;
@@ -80,10 +71,17 @@ span{
     font-family: inter;
 }
 
-.header__horarios{
+.header__description{
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: 700;
+    font-size: 20px;
+}
+
+.header__footer{
     display: flex;
     justify-content: space-between;
     align-items: last baseline;
+    line-height: 0.2;
 }
 
 .header__horario{
@@ -128,7 +126,7 @@ main{
     gap: 40px;
 }
 
-.recipes__title{
+.recipes__title  {
     color: white;
     display: flex;
     align-items: center ;
