--- a/pages/index.css
+++ b/pages/index.css
@@ -140,8 +140,8 @@ main{
     font-weight: 500;
     font-size: 44px;
     line-height: 52px;
-    margin-top: 100px ;
-    margin-bottom: 80px;
+    margin: 100px auto 80px auto ;
+   
 }
 
 .form__label{
