--- a/pages/index.css
+++ b/pages/index.css
@@ -140,7 +140,8 @@ main{
     font-weight: 500;
     font-size: 44px;
     line-height: 52px;
-    margin: 100px 0 80px 0;
+    padding-top: 100px;
+    margin: 0 auto 80px ;
 }
 
 .form__label{
