--- a/pages/index.css
+++ b/pages/index.css
@@ -17,6 +17,8 @@ a{
     text-decoration: none;
     color: black;
     font-weight: 500;
+    list-style: none;
+    text-decoration: none;
 }
 
 body{
@@ -217,4 +219,122 @@ main{
     font-weight: 500;
     font-size: 16px;
     line-height: 20px;
+}
+
+.footer{
+    background-color: rgb(0, 29, 134);
+    background-image: url(/images/background_reservation.svg);
+    background-position: bottom  ;
+    background-repeat: no-repeat;
+    background-size:cover ;
+}
+
+.footer__barra{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding-top:0px ;
+}
+
+.footer__social{
+    display: flex;
+    align-items:baseline;
+    justify-content:flex-start ;
+    flex-direction: column;
+    
+
+}
+
+.footer__social-contenido{
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    line-height: 30px;
+}
+
+.footer {
+  box-sizing: border-box;
+  padding: 60px 80px 60px 80px;
+  font-size: 16px;
+  line-height: 20px;
+
+}
+
+footer{
+  background-color:#1f1f1f;
+  color: white;
+}
+
+.footer__columns {
+  display: flex;
+  justify-content: flex-start;
+  gap: 0;
+  
+}
+
+.footer__column{
+  flex-grow:45;
+}
+
+
+.footer__column_content_hours {
+  margin-right: 80px;
+  flex-grow: 2;
+}
+
+.footer__column_content_social {
+flex-grow:1 ; 
+}
+
+.footer__logo {
+  width: 58px;
+  height: 89px;
+}
+
+.footer__column-heading {
+  margin-bottom: 20px;
+  font-size: 20px;
+}
+
+.footer__list {
+  flex-direction: column;
+  line-height: 16px;
+  row-gap: unset;
+  
+}
+
+.footer__list-item {
+  margin: 0;
+  padding: 0;
+  font-size: 16px;
+  margin-bottom: 16px;
+
+}
+
+.footer__column-link {
+  text-decoration: none;
+  color: white;
+  display: flex;
+  align-items: center;
+}
+
+.footer__social-icon {
+  width: 16px;
+  height: 16px;
+  margin-right: 10px;
+}
+
+.footer__copyright {
+  margin-top: 100px;
+}
+
+.footer__logo{
+    width: 300px;
+
+}
+
+ul {
+
+    list-style: none;
+    text-decoration: none;
 }
