transiciones y import agregados

--- a/pages/index.css
+++ b/pages/index.css
@@ -1,340 +1,8 @@
-
-.page{
-    min-width: 1100px;
-    max-width: 1600px;
-    min-height: 1660px;
-    background-color: rgba(0, 0, 0, 0);
-    margin: 0 auto;
-    font-family: "Noto Serif", "Times New Roman", serif;
-    font-family: "Inter", Arial, sans-serif;
-    font-size: 16px;
-    line-height: 20px;
-    list-style: none;
-    text-decoration: none;
-}
-
-a{
-    text-decoration: none;
-    color: black;
-    font-weight: 500;
-    list-style: none;
-    text-decoration: none;
-}
-
-body{
-    background-color:rgba(255, 199, 229, 0) ;
-}
-
-.contenedor-1{
-    padding: 0 30px;
-}
-.header{
-    background-image: url(/images/background_header.svg);
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-}
-
-.nav{
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    margin-right: 100px;
-    padding-top: 20px;
-}
-
-.nav__links {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: rgb(127, 236, 255);
-    padding: 10px;
-    border-radius: 10px;
-    box-shadow: 10px 2px 2px rgba(0, 90, 52, 0.262);
-    gap: 20px;
-}
-
-.header__contenedor{
-   display: flex;
-   justify-content: center;
-   align-items: center;
-}
-
-h1{
-    font-size: 6rem;
-    line-height: 5rem;
-    font-family: "times new roman";
-    font-weight: 400;
-    color: rgb(0, 128, 255);
-}
-
-span{
-    color: black;
-    font-family: inter;
-}
-
-.header__description{
-    font-family: Arial, Helvetica, sans-serif;
-    font-weight: 700;
-    font-size: 20px;
-}
-
-.header__footer{
-    display: flex;
-    justify-content: space-between;
-    align-items: last baseline;
-    line-height: 0.2;
-}
-
-.header__horario{
-    line-height: 0.3;
-}
-
-iframe{
-    border: 0;
-}
-
-main{
-}
-
-.recipes{
-    padding-top: 30px;
-    background-color: rgb(3, 35, 130);
-    background-image: url(/images/background_recipes.svg);
-    background-position: center;
-    background-repeat: no-repeat;
-    height: 700px;
-}
-
-.recipes__heading{
-    color:white ;
-    background-color: rgba(0, 36, 89, 0);
-    width: 500px;
-    padding-bottom: 40px;
-}
-
-.recipes__heading h2{
-    font-size: 2.8rem;
-}
-
-.recipes__heading p{
-    font-size: 1.2rem;
-}
-
-.recipes__videos{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 40px;
-}
-
-.recipes__title  {
-    color: white;
-    display: flex;
-    align-items: center ;
-    justify-content: space-between;
-}
-
-
-.reservation__title {
-    font-family: inter;
-    font-style: normal;
-    font-weight: 500;
-    font-size: 44px;
-    line-height: 52px;
-    padding-top: 100px;
-    margin: 0 auto 80px ;
-}
-
-.form__label{
-   font-family: inter;
-    font-style: normal;
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 20px;
-    display: inline-block;
-    margin-bottom: 8px;    
-    
-}
-.reservation{
-    background-image: url(/images/background_reservation.svg);
-    background-position: cover;
-    background-repeat: no-repeat;
-    background-size: 100%;
-    display: flex;
-    justify-content: center;align-items: center;
-    flex-direction: column;
-}
-
-.reservation__form{
-    max-width: 385px;
-    margin-bottom:120px;
-}
+@import url(/vendor/normalize.css);
+@import url(/blocks/header.css);
+@import url(/blocks/recipes.css);
+@import url(/blocks/reservation.css);
+@import url(/blocks/footer.css);
 
 
 
-.form__input{
-    font-family: inter;
-    font-style: normal;
-    font-weight: normal;
-    font-size: 20px;
-    line-height: 30px;
-     border-radius: 4px;
-    height: 60px;
-    width: 100%;
-    margin-bottom: 32px;
-
-}
-.form__buttom{
-    border-radius: 4px;
-    background-color: rgb(0, 68, 255);
-    color: aliceblue;
-    display: block;
-    height: 60px;
-    text-align: center;
-    line-height: 60px;
-    margin-bottom: 32px;
-}
-
-.form__buttom:hover{
-    opacity: 70%;
-}
-
-.form__checkbox{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 12px;
-    margin-top: 32px; ;
-}
-
-.form__checkbox-input{
-    width: 20px;
-    height: 20px;
-}
-
-.form__boton{
-    font-family: inter;
-    font-style: normal;
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 20px;
-}
-
-.footer{
-    background-color: rgb(0, 29, 134);
-    background-image: url(/images/background_reservation.svg);
-    background-position: bottom  ;
-    background-repeat: no-repeat;
-    background-size:cover ;
-}
-
-.footer__barra{
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    padding-top:0px ;
-}
-
-.footer__social{
-    display: flex;
-    align-items:baseline;
-    justify-content:flex-start ;
-    flex-direction: column;
-    
-
-}
-
-.footer__social-contenido{
-    display: flex;
-    align-items: center;
-    gap: 10px;
-    line-height: 30px;
-}
-
-.footer {
-  box-sizing: border-box;
-  padding: 60px 80px 60px 80px;
-  font-size: 16px;
-  line-height: 20px;
-
-}
-
-footer{
-  background-color:#1f1f1f;
-  color: white;
-}
-
-.footer__columns {
-  display: flex;
-  justify-content: flex-start;
-  gap: 0;
-  
-}
-
-.footer__column{
-  flex-grow:45;
-}
-
-
-.footer__column_content_hours {
-  margin-right: 80px;
-  flex-grow: 2;
-}
-
-.footer__column_content_social {
-flex-grow:1 ; 
-}
-
-.footer__logo {
-  width: 58px;
-  height: 89px;
-}
-
-.footer__column-heading {
-  margin-bottom: 20px;
-  font-size: 20px;
-}
-
-.footer__list {
-  flex-direction: column;
-  line-height: 16px;
-  row-gap: unset;
-  
-}
-
-.footer__list-item {
-  margin: 0;
-  padding: 0;
-  font-size: 16px;
-  margin-bottom: 16px;
-
-}
-
-.footer__column-link {
-  text-decoration: none;
-  color: white;
-  display: flex;
-  align-items: center;
-}
-
-.footer__social-icon {
-  width: 16px;
-  height: 16px;
-  margin-right: 10px;
-}
-
-.footer__copyright {
-  margin-top: 100px;
-}
-
-.footer__logo{
-    width: 300px;
-
-}
-
-ul {
-
-    list-style: none;
-    text-decoration: none;
-}
