--- a/pages/index.css
+++ b/pages/index.css
@@ -1,8 +1,8 @@
 @import url(/vendor/normalize.css);
+@import url(/blocks/pages.css);
 @import url(/blocks/header.css);
 @import url(/blocks/recipes.css);
 @import url(/blocks/reservation.css);
 @import url(/blocks/footer.css);
-
 
 
