--- a/blocks/form.css
+++ b/blocks/form.css
@@ -1,62 +1,73 @@
-
-
-.form__label{
-   font-family: inter;
-    font-style: normal;
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 20px;
-    display: inline-block;
-    margin-bottom: 8px;    
-    
+.form {
+  max-width: 385px;
 }
 
-
-
-.form__input{
-    font-family: inter;
-    font-style: normal;
-    font-weight: normal;
-    font-size: 20px;
-    line-height: 30px;
-     border-radius: 4px;
-    height: 60px;
-    width: 100%;
-    margin-bottom: 32px;
-
-}
-.form__button{
-    border-radius: 4px;
-    background-color: rgb(0, 68, 255);
-    color: aliceblue;
-    display: block;
-    height: 60px;
-    text-align: center;
-    line-height: 60px;
-    margin-bottom: 32px;
+.form__fieldset {
+  box-sizing: border-box;
+  border: none;
+  padding: 0;
+  margin: 0;
 }
 
-.form__buttom:hover{
-    opacity: 70%;
+.form__label {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  row-gap: 8px;
+  margin-bottom: 32px;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 20px;
 }
 
-.form__checkbox{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 12px;
-    margin-top: 32px; ;
+.form__input {
+  box-sizing: border-box;
+  width: 100%;
+  border-radius: 4px;
+  height: 60px;
+  padding: 15px 20px;
+  border: 1px solid #838383;
+  font-size: 20px;
+  line-height: 30px;
 }
 
-.form__checkbox-input{
-    width: 20px;
-    height: 20px;
+.form__input::placeholder {
+  font-size: 20px;
+  line-height: 30px;
+  color: #838383;
 }
 
-.form__boton{
-    font-family: inter;
-    font-style: normal;
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 20px;
+.form__button {
+  background-color: #2f80ed;
+  border-radius: 4px;
+  width: 100%;
+  height: 60px;
+  margin-bottom: 32px;
+  color: white;
+  border: none;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 20px;
+}
+
+.form__button:hover {
+  opacity: 0.7;
+}
+
+.form__checkbox {
+  border-radius: 2px;
+  height: 20px;
+  width: 20px;
+}
+
+.form__label_type_checkbox {
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  column-gap: 8px;
+}
+
+.form__checkbox:checked {
+  background: #2f71e5 url(../images/check.svg) no-repeat center;
+  background-size: 60%;
 }
