--- a/blocks/header.css
+++ b/blocks/header.css
@@ -1,46 +1,64 @@
-
-.header{
-    background-image: url(/images/background_header.svg);
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
+.header {
+  display: flex;
+  flex-direction: column;
+  height: 100vh;
+  min-height: 720px;
+  max-height: 800px;
+  padding: 30px 80px 40px;
+  position: relative;
+  box-sizing: border-box;
+  background: #fff url("../images/background_header.svg") no-repeat center/cover;
 }
 
-
-
-
-.header__contenedor{
-   display: flex;
-   justify-content: center;
-   align-items: center;
+.header__title {
+  max-width: 709px;
+  margin: 183px 0 0;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 58px;
+  line-height: 72px;
+  letter-spacing: -1px;
 }
 
-.header__title{
-    font-size: 6rem;
-    line-height: 5rem;
-    font-family: "times new roman";
-    font-weight: 400;
-    color: rgb(0, 128, 255);
+.header__span-accent {
+  display: block;
+  font-family: "Noto Serif", "Times New Roman", serif;
+  font-style: italic;
+  font-weight: normal;
+  font-size: 60px;
+  line-height: 72px;
+  color: #2f80ed;
 }
 
-.header__span-accent{
-    color: black;
-    font-family: inter;
+.header__description {
+  max-width: 683px;
+  margin: 28px 0 0;
+  font-family: "Noto Serif", "Times New Roman", serif;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 20px;
+  line-height: 30px;
 }
 
-.header__description{
-    font-family: Arial, Helvetica, sans-serif;
-    font-weight: 700;
-    font-size: 20px;
+.header__image {
+  position: absolute;
+  max-width: 646px;
+  top: 124px;
+  right: 5px;
 }
 
-.header__footer{
-    display: flex;
-    justify-content: space-between;
-    align-items: last baseline;
-    line-height: 0.2;
+.header__footer {
+  margin-top: auto;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  box-sizing: border-box;
 }
 
-.header__paragraph{
-    line-height: 0.3;
+.header__paragraph {
+  font-style: normal;
+  font-weight: 500;
+  color: #838383;
+  margin: 0;
 }
