--- a/blocks/nav.css
+++ b/blocks/nav.css
@@ -1,38 +1,33 @@
-.nav__link{
-    text-decoration: none;
-    color: black;
-    font-weight: 500;
-    list-style: none;
-    text-decoration: none;
+.nav {
+  display: flex;
+  justify-content: space-between;
+  font-family: "Inter", "Arial", sans-serif;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 20px;
 }
 
-
-.nav{
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    margin-right: 100px;
-    padding-top: 20px;
+.nav__logo {
+  height: 39px;
+  width: 105px;
+  position: relative;
+  left: -50px;
 }
 
 .nav__links {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding: 10px;
-    border-radius: 10px;
-    box-shadow: 10px 2px 2px rgba(0, 90, 52, 0.262);
-    gap: 20px;
+  list-style-type: none;
+  margin: 0;
+  display: flex;
+  column-gap: 20px;
 }
 
-.nav__link:hover{
-    color: #2f80ed;
+.nav__link {
+  color: #000000;
+  text-decoration: none;
+  font-weight: bold;
 }
 
-.nav__link:last-child:hover{
-    opacity: 70%;
-    background-color: #00204b;
-    border-radius: 10px;
-    box-shadow: 10px 2px 2px rgba(0, 90, 52, 0.262);
-    
+.nav__link:hover {
+  color: #2f80ed;
 }
