--- a/blocks/page.css
+++ b/blocks/page.css
@@ -1,14 +1,8 @@
-
-.page{
-    min-width: 1100px;
-    max-width: 1600px;
-    min-height: 1660px;
-    background-color: rgba(0, 0, 0, 0);
-    margin: 0 auto;
-    font-family: "Noto Serif", "Times New Roman", serif;
-    font-family: "Inter", Arial, sans-serif;
-    font-size: 16px;
-    line-height: 20px;
-    list-style: none;
-    text-decoration: none;
+.page {
+  min-width: 1100px;
+  max-width: 1600px;
+  margin: 0 auto;
+  font-family: "Inter", "Arial", sans-serif;
+  font-size: 16px;
+  line-height: 20px;
 }
