--- a/blocks/recipes.css
+++ b/blocks/recipes.css
@@ -1,46 +1,48 @@
-
-main{
+.recipes {
+  color: #fff;
+  padding: 100px 80px 215px;
+  background: #0a2750 url("../images/background_recipes.svg") no-repeat
+    center/cover;
 }
 
-iframe{
-    border: 0;
+.recipes__title {
+  margin: 0;
+  max-width: 580px;
+  font-weight: 500;
+  font-size: 44px;
+  line-height: 52px;
 }
 
-
-.recipes{
-    padding-top: 30px;
-    background-color: rgb(3, 35, 130);
-    background-image: url(/images/background_recipes.svg);
-    background-position: center;
-    background-repeat: no-repeat;
-    height: 700px;
+.recipes__subtitle {
+  margin-top: 24px;
+  max-width: 438px;
+  font-family: "Noto Serif", "Times New Roman", serif;
+  font-size: 20px;
+  line-height: 30px;
 }
 
-.recipes__heading{
-    color:white ;
-    background-color: rgba(0, 36, 89, 0);
-    width: 500px;
-    padding-bottom: 40px;
+.recipes__videos {
+  display: flex;
+  margin: 80px 0 0;
+  justify-content: center;
+  column-gap: 40px;
+  list-style-type: none;
+  padding: 0;
 }
 
-.recipes__heading h2{
-    font-size: 2.8rem;
+.recipes__iframe {
+  width: 480px;
+  height: 273px;
+  border: none;
 }
 
-.recipes__heading p{
-    font-size: 1.2rem;
+.recipes__video-caption {
+  margin: 24px 0 0;
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 30px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
-.recipes__videos{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 40px;
-}
-
-.recipes__title  {
-    color: white;
-    display: flex;
-    align-items: center ;
-    justify-content: space-between;
-}
